--- a/Mesprojneu/templates/index.html
+++ b/Mesprojneu/templates/index.html
@@ -26,7 +26,18 @@
     <!-- JavaScript-Code, welcher beim Aufrufen der jeweiligen Buttons durchgeführt wird -->
     <script>
         function csvdownload(){
-            download();
+            fetch("http://127.0.0.1:5000/download_csv")
+                .then(response => response.text())
+                .then(csvData => {
+                    var blob = new Blob([csvData], { type: 'text/csv' });
+                    var link = document.createElement('a');
+                    link.href = window.URL.createObjectURL(blob);
+                    link.download = 'daten.csv';
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                })
+                .catch(error => console.error('Fehler beim Herunterladen der CSV:', error));
         }
         function formatScale() {
             // Hier AJAX-Aufruf für '/format_scale'
